--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -1,5 +1,5 @@
 <%- include ("partials/header") -%>
-	<div class="pageHeaderFixed" style="background-image: url(/images/otvoreni-bazen.png)"></div>
+	<div class="pageHeaderFixed" style="background-image: url(/images/otvoreni-bazeni.jpg)"></div>
 	<div class="pageFixedTitle">БАЗЕНИ НА ОТВОРЕНОМ</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
