--- a/views/skolica-plivanja.ejs
+++ b/views/skolica-plivanja.ejs
@@ -22,11 +22,11 @@
 	<div class="section">
 		<div class="topFade"></div>
 		<div class="bottomFade"></div>
-		<div class="imageBackground padded" style="background-image: url(/images/voda.jpg);">
-			<div class="smallContent padded">
+		<div class="imageBackground padded" style="background-image: url(/images/voda2.jpg);">
+			<div class="smallContent padded" style="padding:50px 0px;">
 				<div class="whiteBoxTransparent">
 					<div class="readingText">
-						Школа стартује 5. октобра 2020. године и одржаваће се у следећим терминима:<br>понедељак, среда и петаk<br>Преподне 09-10ч<br>Поподне 17-18ч
+						Школа стартује <b>5. октобра 2022.</b> године и одржаваће се у следећим терминима:<br>понедељак, среда и петаk<br>Преподне 09-10ч<br>Поподне 17-18ч
 					</div>
 				</div>
 			</div>
