--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -1,5 +1,5 @@
 <%- include ("partials/header") -%>
-	<div class="pageHeaderFixed" style="background-image: url(/images/welness.jpeg)"></div>
+	<div class="pageHeaderFixed" style="background-image: url(/images/spa.jpg)"></div>
 	<div class="pageFixedTitle" style="top:500px;"><i>WELLNESS</i> ЦЕНТАР</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
@@ -27,6 +27,9 @@
 				</div>
 			</div>
 		</div>
+	</div>
+
+	<div class="section padded" style="height:500px;background-image: url(/images/spa2.jpg);background-size:cover ;background-position: center bottom;">
 	</div>
 
 	<div class="section grey padded">
