--- a/views/zatvoreni-bazen.ejs
+++ b/views/zatvoreni-bazen.ejs
@@ -1,5 +1,5 @@
 <%- include ("partials/header") -%>
-	<div class="pageHeaderFixed" style="background-image: url(/images/zatvoreni-bazen.png)"></div>
+	<div class="pageHeaderFixed" style="background-image: url(/images/zatvoreni-bazen2.jpg)"></div>
 	<div class="pageFixedTitle">ЗАТВОРЕНИ БАЗЕН</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
@@ -44,11 +44,11 @@
 	<div class="section">
 		<div class="topFade"></div>
 		<div class="bottomFade"></div>
-		<div class="imageBackground padded" style="background-image: url(/images/voda.jpg);">
-			<div class="smallContent padded">
+		<div class="imageBackground padded" style="background-image: url(/images/voda2.jpg);">
+			<div class="smallContent padded" style="padding:50px 0px;">
 				<div class="whiteBoxTransparent">
 					<div class="readingText">
-						ПРИЛИКОМ КОРИШЋЕЊА ЗАТВОРЕНОГ БАЗЕНА ОБАВЕЗНО ЈЕ НОШЕЊЕ ЗАШТИТНЕ КАПИЦЕ ЗА ПЛИВАЊЕ! <br>Корисници који не поседују капице, могу их купити уз дневне карте.
+						<b>ПРИЛИКОМ КОРИШЋЕЊА ЗАТВОРЕНОГ БАЗЕНА ОБАВЕЗНО ЈЕ НОШЕЊЕ ЗАШТИТНЕ КАПИЦЕ ЗА ПЛИВАЊЕ!</b> <br>Корисници који не поседују капице, могу их купити уз дневне карте.
 					</div>
 				</div>
 			</div>
