--- a/public/css/style.css
+++ b/public/css/style.css
@@ -541,6 +541,8 @@ input[type=number] {
 	right: 0;
 	width: 100%;
 	overflow: hidden;
+	background-color: rgb(255,255,255);
+	text-align: center;
 }
 
 .backgroundVideo video{
