--- a/views/home.ejs
+++ b/views/home.ejs
@@ -156,7 +156,7 @@
         	<a href="https://www.google.com/maps/dir//Sports+and+Recreational+Center+%22Milan+Gale+Mu%C5%A1katirovi%C4%87%22,+Tadeu%C5%A1a+Ko%C5%A1%C4%87u%C5%A1ka+63,+Beograd+110000/@44.8293988,20.4513149,17.77z/data=!4m9!4m8!1m0!1m5!1m1!1s0x475a65374a579c6f:0x51c018508aaf5907!2m2!1d20.4539115!2d44.8299838!3e0" rel="external" target="_blank">НАВИГАЦИЈА</a>
         </div>
 	</div>
-	<div class="section">
+	<div class="section" style="background-color:rgb(255,255,255);text-align:center;">
 		<video style="max-width:100%" poster="/videos/swim1.jpg" autoplay loop muted playsinline>
 			<source src="/videos/swim1.mp4" type="video/mp4">
 		</video>
