--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 		</div><!--class:pageContent-->
-		<div class="footer padded">
+		<div class="footer padded" style="position:relative;z-index:2000">
 			<div class="text">Спортско Рекреативни Центар Милан Гале Мушкатировић</div>
 			<div class="copyright">&copy; <span id="copyright-year"></span> - Сва права задржана.</div>
 			<script>
