--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,11 @@
 <%- include ("partials/header") -%>
-	<div class="pageHeaderFixed" style="background-image: url(/images/homeHeader.jpg)"></div>
+	<div class="pageHeaderFixed" style="background-image: url(/images/homeHeader.jpg)">
+		<div style="height:600px">
+			<video poster="/videos/home1.jpg" autoplay loop muted playsinline>
+				<source src="/videos/home1.mp4" type="video/mp4">
+			</video>
+		</div>
+	</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	<div class="section padded white">
