--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,8 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/homeHeader.jpg)">
 		<div style="height:600px">
-			<video poster="/videos/home1.jpg" autoplay loop muted playsinline>
-				<source src="/videos/home1.mp4" type="video/mp4">
+			<video poster="/images/videos/home1.jpg" autoplay loop muted playsinline>
+				<source src="/images/videos/home1.mp4" type="video/mp4">
 			</video>
 		</div>
 	</div>
@@ -35,8 +35,8 @@
 		<div class="topFade"></div>
 		<div class="bottomFade"></div>
 		<div class="backgroundVideo">
-			<video poster="/videos/water2.jpg" autoplay loop muted playsinline src="/videos/water2.mp4">
-				<source src="/videos/water2.mp4" type="video/mp4">
+			<video poster="/images/videos/water2.jpg" autoplay loop muted playsinline>
+				<source src="/images/videos/water2.mp4" type="video/mp4">
 			</video>
 		</div>
 		<div class="videoBackground padded">
@@ -163,8 +163,8 @@
         </div>
 	</div>
 	<div class="section" style="background-color:rgb(255,255,255);text-align:center;">
-		<video style="max-width:100%" poster="/videos/swim1.jpg" autoplay loop muted playsinline>
-			<source src="/videos/swim1.mp4" type="video/mp4">
+		<video style="max-width:100%" poster="/images/videos/swim1.jpg" autoplay loop muted playsinline>
+			<source src="/images/videos/swim1.mp4" type="video/mp4">
 		</video>
 	</div>
 <%- include ("partials/footer") -%>
