--- a/views/o-nama.ejs
+++ b/views/o-nama.ejs
@@ -1,8 +1,8 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/homeHeader.jpg)">
 		<div style="height:600px">
-			<video poster="/videos/dron1.jpg" autoplay loop muted playsinline>
-				<source src="/videos/dron1.mp4" type="video/mp4">
+			<video poster="/images/videos/dron1.jpg" autoplay loop muted playsinline>
+				<source src="/images/videos/dron1.mp4" type="video/mp4">
 			</video>
 		</div>
 	</div>
@@ -79,8 +79,8 @@
 		<div class="topFade"></div>
 		<div class="bottomFade"></div>
 		<div class="backgroundVideo" style="max-height:50vh">
-			<video poster="/videos/water2.jpg" autoplay playsinline muted loop>
-				<source src="/videos/water2.mp4" type="video/mp4">
+			<video poster="/images/videos/water2.jpg" autoplay playsinline muted loop>
+				<source src="/images/videos/water2.mp4" type="video/mp4">
 			</video>
 		</div>
 		<div class="videoBackground padded">
