--- a/views/o-nama.ejs
+++ b/views/o-nama.ejs
@@ -1,5 +1,5 @@
 <%- include ("partials/header") -%>
-	<div class="pageHeaderFixed" style="background-image: url(/images/homeHeader.jpg)">
+	<div class="pageHeaderFixed" style="background-color:rgb(255,255,255)">
 		<div style="height:600px">
 			<video poster="/images/videos/dron1.jpg" autoplay loop muted playsinline>
 				<source src="/images/videos/dron1.mp4" type="video/mp4">
