--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 	<div class="pageHeaderFixed" style="background-color:rgb(255,255,255)">
 		<div style="height:600px">
 			<video poster="/images/videos/home1.jpg" autoplay loop muted playsinline>
-				<source src="/images/videos/home1.mp4" type="video/mp4">
+				<source src="/videos/dron2.mp4" type="video/mp4">
 			</video>
 		</div>
 	</div>
@@ -87,7 +87,7 @@
 
 								var date	=	document.createElement("DIV");
 								date.setAttribute("class","date");
-								date.innerHTML = obavestenjeJson.date.split("-")[2]+"."+obavestenjeJson.date.split("-")[1]+"."+obavestenjeJson.date.split("-")[0];
+								date.innerHTML = obavestenjeJson.date.split("-")[2]+"."+obavestenjeJson.date.split("-")[1]+"."+obavestenjeJson.date.split("-")[0]+".";
 								obavestenje.appendChild(date);
 
 								var title	=	document.createElement("DIV");
