--- a/views/o-nama.ejs
+++ b/views/o-nama.ejs
@@ -104,7 +104,7 @@
 					<div class="listTitle">СКУПШТИНА Привредног Друштва</div>
 					<ul class="list">
 						<li><p>Немања Маријан, <span class="smallItalic">председник</span></p></li>
-						<li><p>Nikola Aritonović, Никола Артиновић, <span class="smallItalic">члан</span></p></li>
+						<li><p>Никола Артиновић, <span class="smallItalic">члан</span></p></li>
 						<li><p>Ана Поповић, <span class="smallItalic">члан</span></p></li>
 					</ul>
 				</div>
