--- a/views/obavestenja.ejs
+++ b/views/obavestenja.ejs
@@ -9,6 +9,9 @@
 			</div>
 			<script>
 				var obavestenja		=	JSON.parse(<%- JSON.stringify(obavestenja) %>);
+				obavestenja.sort(function(a, b) {
+				    return parseFloat(b.actualdate) - parseFloat(a.actualdate);
+				});
 				var counter			=	0;
 				for(var i=0;i<obavestenja.length;i++){
 					var obavestenjeJson	=	obavestenja[i];
@@ -19,7 +22,7 @@
 
 							var date	=	document.createElement("DIV");
 							date.setAttribute("class","date");
-							date.innerHTML = obavestenjeJson.date.split("-")[2]+"."+obavestenjeJson.date.split("-")[1]+obavestenjeJson.date.split("-")[0];
+							date.innerHTML = obavestenjeJson.date.split("-")[2]+"."+obavestenjeJson.date.split("-")[1]+"."+obavestenjeJson.date.split("-")[0]+".";
 							obavestenje.appendChild(date);
 
 							var title	=	document.createElement("DIV");
