--- a/views/zatvoreni-bazen.ejs
+++ b/views/zatvoreni-bazen.ejs
@@ -459,7 +459,7 @@
 				</tr>
 				<tr>
 					<td>Породична карта  ( родитељи са једним или двоје деце до 12 година )</td>
-					<td>викендом</td>
+					<td>свим данима</td>
 					<td>600,00 дин.</td>
 				</tr>
 				<tr>
