--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -8,7 +8,7 @@
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
-					<div class="readingText">У склопу њеллнесс центра налазе се: саунски блок са једном руском (сауна са влажним ваздухом),  једном финском (сауна са сувим ваздухом) и једном инфрацрвеном сауном, затим тепидаријум, тушеви и мали базен димензија 12 џ 8 метара намењен расхлађивању након и између саунских сесија. Саунски блок доступан је бесплатно за децу до 4 године.</div>
+					<div class="readingText">У склопу Wellness центра налазе се: саунски блок са једном руском (сауна са влажним ваздухом),  једном финском (сауна са сувим ваздухом) и једном инфрацрвеном сауном, затим тепидаријум, тушеви и мали базен димензија 12 џ 8 метара намењен расхлађивању након и између саунских сесија. Саунски блок доступан је бесплатно за децу до 4 године.</div>
 				</div>
 				<div class="inline">
 					<div class="readingText">
