--- a/public/css/style.css
+++ b/public/css/style.css
@@ -636,12 +636,15 @@ input[type=number] {
 	transition: all ease 0.3s;
 }
 
+.obavestenja .obavestenje .obvBox{
+	height: 300px;
+	overflow: hidden;
+}
+
 .obavestenja .obavestenje .text{
 	font-size: 16px;
 	color: rgb(100,100,100);
 	text-align: left;
-	overflow: hidden;
-	height: 200px;
 	-webkit-transition: all ease 0.3s;
 	-moz-transition: all ease 0.3s;
 	-ms-transition: all ease 0.3s;
